Migrate to SpringBoot 3/Spring 6