@@ -13,18 +13,17 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <kotlin.version>1.7.20</kotlin.version>
-        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
-        <spring.boot.version>2.7.4</spring.boot.version>
-        <spring.version>5.3.23</spring.version>
-        <spring.security.version>5.7.3</spring.security.version>
-        <jackson.version>2.13.4</jackson.version>
-        <jackson.databind.version>2.13.4.2</jackson.databind.version>
-        <openapi-ui.version>1.6.11</openapi-ui.version>
-        <java-jwt.version>4.1.0</java-jwt.version>
+        <spring.boot.version>3.0.0</spring.boot.version>
+        <spring.version>6.0.0</spring.version>
+        <spring.security.version>6.0.0</spring.security.version>
+        <jackson.version>2.14.0</jackson.version>
+        <jackson.databind.version>2.14.0</jackson.databind.version>
+        <openapi-ui.version>1.6.13</openapi-ui.version>
+        <java-jwt.version>4.2.1</java-jwt.version>
         <jupiter.version>5.9.0</jupiter.version>
     </properties>
 
@@ -44,34 +43,7 @@
             <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.databind.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-kotlin</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-text</artifactId>
-            <version>1.10.0</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.lzh0379</groupId>
-            <artifactId>jdatepicker</artifactId>
-            <version>2.0.3</version>
-        </dependency>
-
+        
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -97,7 +69,7 @@
                 <version>${kotlin.version}</version>
                 <configuration>
                     <nowarn>true</nowarn>
-                    <jvmTarget>11</jvmTarget>
+                    <jvmTarget>17</jvmTarget>
                     <compilerPlugins>
                         <plugin>spring</plugin>
                         <plugin>no-arg</plugin>
@@ -165,7 +137,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.jupiter</groupId>
